--- a/PythonApplication2/requirements.txt
+++ b/PythonApplication2/requirements.txt
@@ -1,5 +1,8 @@
+beautifulsoup4==4.4.1
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+selenium==2.49.0
+splinter==0.7.3
 Werkzeug==0.11.3
