--- a/PythonApplication2/requirements.txt
+++ b/PythonApplication2/requirements.txt
@@ -1,11 +1,15 @@
 beautifulsoup4==4.4.1
 captcha==0.2.1
+Cython==0.23
+Django==1.8.4
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
+Kivy-Garden==0.1.4
 MarkupSafe==0.23
 Pillow==3.2.0
 pymongo==3.2.2
+requests==2.10.0
 selenium==2.49.0
 splinter==0.7.3
 Werkzeug==0.11.3
